# coffee-journal

./: .gitignore  clean_corrupted_data.py  create_test_data.py  migrate_v1_2_to_v1_3.py  mobile-dropdown-solution.txt  package.json  pyproject.toml  repair_all_corrupted_data.py  repair_shots.py  schema_version.json  start-frontend.sh  stress_test_api.py  stress_test_api_realistic.py  test_delete_modal.html  test_shot_fix.py  test_shot_session_edit_routing.js  validate_schemas.py
docker/: Dockerfile.frontend  docker-compose.yml  nginx.conf
temp/: baskets.json  batches.backup_20250816_202558.json  batches.json  bean_types.json  brew_methods.json  brew_sessions.backup_20250816_202558.json  brew_sessions.json  brewers.json  countries.json  decaf_methods.json  filters.json  grinders.json  kettles.json  portafilters.json  products.backup_20250816_202558.json  products.json  recipes.json  regions.json  roasters.backup_20250816_202558.json  roasters.json  scales.backup_20250816_202558.json  scales.json  shot_sessions.backup_20250816_202558.json  shot_sessions.json  shots.backup_20250816_202558.json  shots.json  shots_repaired.json  tampers.json  wdt_tools.json
test_data/: batches.json  bean_types.json  brew_methods.json  brew_sessions.json  brewers.json  countries.json  data_version.json  decaf_methods.json  filters.json  grinders.json  kettles.json  products.json  recipes.json  roasters.json  scales.json  shot_sessions.json  shots.json  tampers.json
tests/: test_api_endpoints.py  test_api_short_form.py  test_batch_active_flag.py  test_batch_stats_with_shots.py  (+50 more)
(+275 files in other folders)
