[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coffeejournal"
version = "0.1.0"
description = "A Flask-based coffee brewing journal application"
requires-python = ">=3.12"
dependencies = [
    "flask>=2.3.0,<3.0",
    "flask-cors>=4.0.0",
    "pytest>=8.4.1",
    "requests>=2.25.0",
    "packaging>=21.0",
    "filelock>=3.18.0",
    "aiohttp>=3.12.15",
    "gunicorn>=23.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0"
]

[project.scripts]
coffeejournal = "coffeejournal.wsgi:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
norecursedirs = ["scripts"]
